# PyAnalyzer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml  setup.py
include/: pyframe.h  python_frame.h
src/: pyframe.cpp  pyspy.cpp  python_analyzer.cpp  python_frame.cpp
tests/: test.py
